--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -672,8 +672,19 @@ p {
   max-width: 250px;
 }
 
+.logo-img-css {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+
+.logo-img-css img{
+  height: 5rem;
+}
 .ud-hero-brands-wrapper img:hover {
   opacity: 1;
+  filter: brightness(1.3);
 }
 
 .ud-hero-image {
